[gd_scene load_steps=12 format=3 uid="uid://dwcd6tgw5po4y"]

[ext_resource type="FontVariation" uid="uid://weeyd75f2ma7" path="res://fonts/default_font_medium.tres" id="1"]
[ext_resource type="StyleBox" uid="uid://s4015jqriuh3" path="res://styles/PanelStyleTransparent.tres" id="2"]
[ext_resource type="Script" path="res://menus/pregame_screen/PregameStartTab.gd" id="3"]
[ext_resource type="Script" path="res://menus/HBHovereableButton.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://cm5g41krj37em" path="res://menus/pregame_screen/PreGameLeaderboardHistoryDisplay.tscn" id="4_43v3t"]
[ext_resource type="Script" path="res://menus/HBSimpleMenu.gd" id="5"]
[ext_resource type="Script" path="res://menus/UniversalScrollList.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://cai6nkgeq8ftu" path="res://graphics/icons/icon_information_sign.svg" id="8"]
[ext_resource type="StyleBox" uid="uid://qlctqc40lhg6" path="res://styles/PanelStyleTransparentHover.tres" id="9_4nist"]

[sub_resource type="StyleBoxFlat" id="4"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.0901961, 0.556863, 0.74902)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing_size = 3.0

[sub_resource type="StyleBoxEmpty" id="3"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[node name="HBoxContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource("3")

[node name="Panel" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="HBPanelContainerBlurEX" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer"]
clip_contents = false
layout_mode = 2
focus_neighbor_right = NodePath("../../../Panel2/HistoryDisplay")
focus_mode = 2
script = ExtResource("6")
container_path = NodePath("PanelContainer/ModifierButtonContainer")
horizontal_step = 0

[node name="PanelContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ModifierButtonContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer/ScrollContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 7

[node name="Panel2" type="HBPanelContainerBlurEX" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2")

[node name="HistoryDisplay" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Panel2" instance=ExtResource("4_43v3t")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../Panel/MarginContainer/ScrollContainer")

[node name="Panel2" type="HBPanelContainerBlurEX" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
theme_override_styles/panel = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer/Panel2"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/Panel2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer/Panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8")
stretch_mode = 5

[node name="LeaderboardLegalLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer/Panel2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1")
text = "Modifiers are not allowed in the leaderboard"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Panel2" type="HBPanelContainerBlurEX" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_right = NodePath("../../../Panel/HBoxContainer/VBoxContainer/HBoxContainer/Panel2/HistoryDisplay")
focus_mode = 2
alignment = 1
script = ExtResource("5")
orientation = 1

[node name="StartButton" type="Button" parent="Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_styles/hover = SubResource("4")
theme_override_styles/pressed = SubResource("4")
theme_override_styles/normal = SubResource("3")
text = "Start"
script = ExtResource("4")
normal_style = SubResource("3")
hover_style = ExtResource("9_4nist")

[node name="StartPractice" type="Button" parent="Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_styles/hover = SubResource("4")
theme_override_styles/pressed = SubResource("4")
theme_override_styles/normal = SubResource("3")
text = "Start Practice"
script = ExtResource("4")
normal_style = SubResource("3")
hover_style = ExtResource("9_4nist")

[node name="BackButton" type="Button" parent="Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_styles/hover = SubResource("4")
theme_override_styles/pressed = SubResource("4")
theme_override_styles/normal = SubResource("3")
text = "Back"
script = ExtResource("4")
normal_style = SubResource("3")
hover_style = ExtResource("9_4nist")

[connection signal="out_from_bottom" from="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer/ScrollContainer" to="Panel2/MarginContainer/VBoxContainer" method="grab_focus"]

[editable path="Panel/HBoxContainer/VBoxContainer/HBoxContainer/Panel2/HistoryDisplay"]
